# bandix

./: .gitignore  Cargo.toml  README.en.md  README.md  README.zh.md  build_mips.sh  build_release.sh  install_dependencies.sh  rustfmt.toml  u32_evaluation.md
.cargo/: config.toml
.github/workflows/: build bandix.yml
bandix/: Cargo.toml  build.rs
bandix-common/: Cargo.toml
bandix-common/src/: lib.rs
bandix-data/metrics/: 245a5f120546.ring  80afca882159.ring  f09e4a899a45.ring
bandix-ebpf/: Cargo.toml  build.rs
bandix-ebpf/src/: main.rs  throttle.rs  traffic.rs  utils.rs
bandix-ebpf/src/modules/: mod.rs
bandix-ebpf/src/modules/dns/: maps.rs  mod.rs
bandix-ebpf/src/modules/traffic/: maps.rs  mod.rs
bandix/src/: command.rs  device.rs  display.rs  main.rs  monitor.rs  storage.rs  system.rs  traffic.rs  utils.rs  web.rs
bandix/src/api/: connection.rs  dns.rs  mod.rs  traffic.rs
bandix/src/ebpf/: dns.rs  egress.rs  ingress.rs  mod.rs  shared.rs  traffic.rs
bandix/src/monitor/: connection.rs  dns.rs  mod.rs  traffic.rs
bandix/src/storage/: device_registry.rs  dns.rs  hostname.rs  mod.rs  tiered_ring.rs  traffic.rs
