[workspace]
resolver = "2"
members = ["bandix", "bandix-common", "bandix-ebpf"]
default-members = ["bandix", "bandix-common"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "519abffef7064ae8a79502e49b8187a363af3ad5", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", rev = "519abffef7064ae8a79502e49b8187a363af3ad5", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "519abffef7064ae8a79502e49b8187a363af3ad5", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "519abffef7064ae8a79502e49b8187a363af3ad5", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "519abffef7064ae8a79502e49b8187a363af3ad5", default-features = false }


network-types = { version = "0.0.8", default-features = false }
ctrlc = { version = "3.4.7" }
anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
clap = { version = "4.5.40", features = ["derive"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }
axum = { version = "0.7.3", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
comfy-table = "7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
trust-dns-proto = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }


# Optimize compilation size
[profile.dev]
panic = "abort"

[profile.release]
debug = 0
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package.bandix-ebpf]
debug = 0
codegen-units = 1
