[package]
name = "bandix-common"
version = "0.1.0"
edition = "2021"

license = { workspace = true }

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"
name = "bandix_common"
