[package]
name = "bandix"
version = "0.12.0"
edition = "2021"

license = { workspace = true }

[dependencies]
bandix-common = { path = "../bandix-common", features = ["user", "serde"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "io-util",
    "sync",
], default-features = false }
clap = { workspace = true, features = ["derive"], default-features = false }
ctrlc = { workspace = true }
axum = { version = "0.7.3", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
comfy-table = "7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
trust-dns-proto = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
bandix-ebpf = { path = "../bandix-ebpf" }

[[bin]]
name = "bandix"
path = "src/main.rs"
