[package]
name = "bandix"
version = "0.12.5"
edition = "2021"

license = { workspace = true }

[dependencies]
bandix-common = { path = "../bandix-common", features = ["user", "serde"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "io-util",
    "sync",
], default-features = false }
clap = { workspace = true, features = ["derive"], default-features = false }
ctrlc = { workspace = true }
axum = { version = "0.7.3", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
comfy-table = "7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
trust-dns-proto = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
bandix-ebpf = { path = "../bandix-ebpf" }

[[bin]]
name = "bandix"
path = "src/main.rs"
