[package]
name = "bandix"
version = "0.12.5"
edition = "2021"

license = { workspace = true }

[dependencies]
bandix-common = { path = "../bandix-common", features = ["user", "serde"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "io-util",
    "sync",
], default-features = false }
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
comfy-table = { workspace = true }
chrono = { workspace = true }
trust-dns-proto = { workspace = true }
reqwest = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
bandix-ebpf = { path = "../bandix-ebpf" }

[[bin]]
name = "bandix"
path = "src/main.rs"
